syntax="proto3";

option csharp_namespace = "MeterReader.gRPC";

import "google/protobuf/Timestamp";

service MeterReadingService{
	rpc AddReading(ReadingPacket) returns (StatusMessage);
}

message ReadingPacket{
	repeated ReadingMessage Redings = 1;
	ReadingStatus Successful = 4;
}

message ReadingMessage{
	int32 customerId = 1;
	int32 ReadingValue = 2;
	string Notes = 3;
	google.protobuf.Timestamp ReadingTme = 5;
	reserved 4;
	reserved 'Successfull';
}

message StatusMessage{
	ReadingStatus Success = 1;
	string Message = 2;
}

enum ReadingStatus{ 
	Unknown = 0;
	Success = 1;
	Failure = 2;
}